--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -410,7 +410,6 @@
 
                 </android.support.v7.widget.CardView>
 
-<!--
                 <android.support.v7.widget.CardView
                     android:id="@+id/cv_et_edit_profile_re_password"
                     android:layout_width="match_parent"
@@ -469,55 +468,13 @@
 
                     </android.support.design.widget.TextInputLayout>
 
-                </android.support.v7.widget.CardView>-->
-
-                <!--<RelativeLayout
-                    android:id="@+id/rl_seller_type"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/cv_et_edit_profile_re_password"
-                    android:layout_marginTop="20dp">
-
-
-                    <TextView
-                        android:id="@+id/tv_seller_type"
-                        android:layout_width="wrap_content"
-                        android:layout_height="30dp"
-                        android:gravity="center"
-                        android:text="@string/text_seller_type"
-                        android:textColor="@color/text_color_effect"
-                        android:textSize="12sp" />
-
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:id="@+id/rl_edit_profile_spinner"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/rl_seller_type"
-                    android:background="@color/semi_transparent_white">
-
-                    <com.jaredrummler.materialspinner.MaterialSpinner
-                        android:id="@+id/sp_edit_profile_spinner"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:hint="@string/spinner_hint"
-                        android:textSize="15sp"
-                        app:ms_arrow_tint="@color/text_color_black"
-                        app:ms_background_color="@android:color/transparent"
-                        app:ms_dropdown_height="wrap_content"
-                        app:ms_dropdown_max_height="300dp"
-                        app:ms_hide_arrow="false"
-                        app:ms_text_color="@color/text_color_black" />
-
-
-                </RelativeLayout>-->
+                </android.support.v7.widget.CardView>
 
                 <android.support.v7.widget.CardView
                     android:id="@+id/cv_et_sign_btn_edit_profile"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/cv_et_edit_profile_password"
+                    android:layout_below="@id/cv_et_edit_profile_re_password"
                     android:layout_marginBottom="50dp"
                     android:layout_marginTop="30dp"
                     android:background="?android:attr/selectableItemBackground"
@@ -543,7 +500,7 @@
                     android:id="@+id/cv_et_sign_btn_edit_profile_click"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/cv_et_edit_profile_password"
+                    android:layout_below="@id/cv_et_edit_profile_re_password"
                     android:layout_marginBottom="55dp"
                     android:layout_marginEnd="5dp"
                     android:layout_marginLeft="5dp"
