--- a/app/src/main/res/layout/activity_dialog_image_picker.xml
+++ b/app/src/main/res/layout/activity_dialog_image_picker.xml
@@ -5,14 +5,19 @@
     android:layout_height="wrap_content"
     android:layout_margin="20dp"
     android:background="@drawable/dialog_bg"
-    android:padding="10dp">
+    android:paddingTop="10dp"
+    android:paddingRight="10dp"
+    android:paddingEnd="10dp"
+    android:paddingLeft="10dp"
+    android:paddingStart="10dp"
+    android:paddingBottom="5dp"
+    >
 
 
     <android.support.v7.widget.CardView
         android:id="@+id/cv_et_sign_btn_edit_profile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
         android:background="?android:attr/selectableItemBackground"
         android:foreground="?android:attr/selectableItemBackground"
         app:cardCornerRadius="5dp"
