--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -350,7 +350,7 @@
 
                 </android.support.v7.widget.CardView>
 
-                <android.support.v7.widget.CardView
+                <!--<android.support.v7.widget.CardView
                     android:id="@+id/cv_et_edit_profile_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -468,13 +468,13 @@
 
                     </android.support.design.widget.TextInputLayout>
 
-                </android.support.v7.widget.CardView>
+                </android.support.v7.widget.CardView>-->
 
                 <android.support.v7.widget.CardView
                     android:id="@+id/cv_et_sign_btn_edit_profile"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/cv_et_edit_profile_re_password"
+                    android:layout_below="@id/cv_et_edit_profile_phone_number"
                     android:layout_marginBottom="50dp"
                     android:layout_marginTop="30dp"
                     android:background="?android:attr/selectableItemBackground"
@@ -500,7 +500,7 @@
                     android:id="@+id/cv_et_sign_btn_edit_profile_click"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/cv_et_edit_profile_re_password"
+                    android:layout_below="@id/cv_et_edit_profile_phone_number"
                     android:layout_marginBottom="55dp"
                     android:layout_marginEnd="5dp"
                     android:layout_marginLeft="5dp"
