--- a/app/src/main/res/layout/activity_dialog_image_picker.xml
+++ b/app/src/main/res/layout/activity_dialog_image_picker.xml
@@ -5,13 +5,12 @@
     android:layout_height="wrap_content"
     android:layout_margin="20dp"
     android:background="@drawable/dialog_bg"
-    android:paddingTop="10dp"
-    android:paddingRight="10dp"
+    android:paddingBottom="5dp"
     android:paddingEnd="10dp"
     android:paddingLeft="10dp"
+    android:paddingRight="10dp"
     android:paddingStart="10dp"
-    android:paddingBottom="5dp"
-    >
+    android:paddingTop="10dp">
 
 
     <android.support.v7.widget.CardView
