--- a/app/src/main/res/layout/activity_my_cart_grid_items.xml
+++ b/app/src/main/res/layout/activity_my_cart_grid_items.xml
@@ -35,6 +35,25 @@
                     android:scaleType="fitCenter"
                     android:src="@drawable/the_app_guru" />
 
+
+                <RelativeLayout
+                    android:id="@+id/rl_my_cart_grid_item_image_progress"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_centerInParent="true"
+                    android:padding="3dp"
+                    android:visibility="visible">
+
+                    <fr.castorflex.android.circularprogressbar.CircularProgressBar
+                        android:id="@+id/cpb_my_cart_grid_item_image_progressbar_circular"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:indeterminate="true"
+                        android:indeterminateOnly="false"
+                        app:cpb_colors="@array/gplus_colors" />
+
+                </RelativeLayout>
+
             </RelativeLayout>
 
             <RelativeLayout
