--- a/app/src/main/res/layout/activity_my_cart.xml
+++ b/app/src/main/res/layout/activity_my_cart.xml
@@ -105,7 +105,7 @@
                 android:layout_marginTop="10dp"
                 android:text="@string/tv_my_cart_checkout"
                 android:textColor="@color/text_color_white"
-                android:textSize="15sp" />
+                android:textSize="12sp" />
 
             <TextView
                 android:id="@+id/tv_total_number_brack_open"
@@ -152,10 +152,10 @@
                 android:layout_below="@id/tv_total_number_brack_closed"
                 android:layout_marginLeft="15dp"
                 android:layout_marginStart="15dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="8dp"
                 android:text="@string/tv_my_cart_total_items_price"
                 android:textColor="@color/text_color_white"
-                android:textSize="18sp" />
+                android:textSize="15sp" />
 
         </RelativeLayout>
 
@@ -193,9 +193,9 @@
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="20dp"
-                android:visibility="gone"
                 android:layout_marginRight="20dp"
-                android:background="@drawable/rl_my_cart_checkout_text_bg">
+                android:background="@drawable/rl_my_cart_checkout_text_bg"
+                android:visibility="gone">
 
                 <TextView
                     android:id="@+id/tv_checkout_text_zoom"
