--- a/app/src/main/res/layout/activity_my_cart.xml
+++ b/app/src/main/res/layout/activity_my_cart.xml
@@ -37,13 +37,14 @@
     <RelativeLayout
         android:id="@+id/rl_my_cart_recyler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@id/toolbar_my_cart"
-        android:layout_marginEnd="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="80dp"
         tools:context=".SubCategoryActivity">
 
         <android.support.v7.widget.RecyclerView
@@ -51,12 +52,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scrollbars="vertical" />
-
-        <RelativeLayout
-            android:id="@+id/rl_blank"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_below="@id/recycler_view_my_cart" />
 
     </RelativeLayout>
 
@@ -153,6 +148,7 @@
                 android:layout_marginLeft="15dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginBottom="5dp"
                 android:text="@string/tv_my_cart_total_items_price"
                 android:textColor="@color/text_color_white"
                 android:textSize="15sp" />
