--- a/app/src/main/res/layout/activity_sub_category_product_list.xml
+++ b/app/src/main/res/layout/activity_sub_category_product_list.xml
@@ -26,10 +26,11 @@
                 android:id="@+id/toolbar_text_sub_category_product"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:layout_marginEnd="53dp"
                 android:ellipsize="end"
                 android:ems="3"
-                android:maxLines="1"
                 android:gravity="center_vertical"
+                android:maxLines="1"
                 android:text="@string/tv_toolbar_subcategory_product"
                 android:textColor="@color/text_color_white"
                 android:textSize="15sp" />
@@ -81,7 +82,6 @@
             <!--cartitem badge counter (End)-->
 
 
-
             <!--cart imageview (Start)-->
             <RelativeLayout
                 android:id="@+id/rl_cart_icon_sub_category_product_list_click"
@@ -130,17 +130,16 @@
             <!--cartitem badge counter (End)-->
 
 
-
         </RelativeLayout>
 
     </android.support.v7.widget.Toolbar>
 
     <RelativeLayout
-        android:layout_margin="-5dp"
         android:id="@+id/rl_sub_category_product_recyler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/toolbar_sub_category_product"
+        android:layout_margin="-5dp"
         tools:context=".SubCategoryActivity">
 
         <android.support.v7.widget.RecyclerView
