--- a/app/src/main/res/layout/activity_my_cart_list_items.xml
+++ b/app/src/main/res/layout/activity_my_cart_list_items.xml
@@ -33,7 +33,7 @@
                     android:layout_centerInParent="true"
                     android:adjustViewBounds="true"
                     android:scaleType="fitCenter"
-                    android:src="@drawable/the_app_guru" />
+                    android:src="@drawable/ic_noo_image" />
 
 
                 <RelativeLayout
