--- a/app/src/main/res/layout/activity_my_cart_list_items.xml
+++ b/app/src/main/res/layout/activity_my_cart_list_items.xml
@@ -22,6 +22,7 @@
 
 
             <RelativeLayout
+                android:layout_centerVertical="true"
                 android:id="@+id/rl_my_cart_single_product_image"
                 android:layout_width="100dp"
                 android:layout_height="100dp">
@@ -59,7 +60,7 @@
             <RelativeLayout
                 android:id="@+id/rl_single_product_item_discription"
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_height="wrap_content"
                 android:layout_toEndOf="@id/rl_my_cart_single_product_image">
 
                 <RelativeLayout
@@ -89,7 +90,7 @@
 
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_below="@id/rl_my_cart_single_product_name">
 
 
